Fixed vertical align for out of stock message in mobile device

--- a/packages/scandipwa/src/component/ProductCompareAttributeRow/ProductCompareAttributeRow.style.scss
+++ b/packages/scandipwa/src/component/ProductCompareAttributeRow/ProductCompareAttributeRow.style.scss
@@ -67,5 +67,9 @@
         @extend .ProductCompareAttributeRow-Value;
 
         padding-top: 15px;
+
+        @include mobile {
+            padding-top: 39px;
+        }
     }
 }
